<resources>
    <string name="app_name">Advertiser</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Reconfirm Password</string>
    <string name="signup">SIGN UP</string>
    <string name="ortxt">Or</string>
    <string name="signupusing">Sign up using</string>
    <string name="loginwithfacebook">Log in with Facebook</string>
    <string name="loginwithtwiiter">Log in with Twitter</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_crop">Crop</string>
    <string name="usersetting">&#xf100;</string>
    <string name="reward">&#xf101;</string>
    <string name="file">&#xf102;</string>
    <string name="fileA">&#xf103;</string>
    <string name="fileB">&#xf104;</string>
    <string name="cross">&#xf105;</string>
    <string name="crossA">&#xf106;</string>
    <string name="power">&#xf107;</string>
    <string name="powerA">&#xf108;</string>
    <string name="halfstar">&#xf109;</string>
    <string name="edit">&#xf10a;</string>
    <string name="lockcircle">&#xf10b;</string>
    <string name="clock">&#xf10c;</string>
    <string name="clockA">&#xf10d;</string>
    <string name="calender">&#xf10e;</string>
    <string name="share">&#xf10f;</string>
    <string name="shareA">&#xf110;</string>
    <string name="settting">&#xf111;</string>
    <string name="downarrow">&#xf113;</string>
    <string name="downarrowA">&#xf114;</string>
    <string name="tick">&#xf115;</string>
    <string name="tickA">&#xf116;</string>
    <string name="heart">&#xf117;</string>
    <string name="heartfill">&#xf118;</string>
    <string name="heartA">&#xf119;</string>
    <string name="like">&#xf11a;</string>
    <string name="likeA">&#xf11b;</string>
    <string name="fileC">&#xf11c;</string>
    <string name="fileD">&#xf11d;</string>
    <string name="search">&#xf11e;</string>
    <string name="searchA">&#xf11f;</string>
    <string name="rightarrow">&#xf120;</string>
    <string name="rightarrowA">&#xf121;</string>
    <string name="rightarrowdouble">&#xf122;</string>
    <string name="leftarrowdouble">&#xf123;</string>
    <string name="leftarrow">&#xf124;</string>
    <string name="leftarrowA">&#xf125;</string>
    <string name="locationicon">&#xf126;</string>
    <string name="twitter">&#xf127;</string>
    <string name="facebookicon">&#xf128;</string>
    <string name="eyeblock">&#xf129;</string>
    <string name="eye">&#xf12a;</string>
    <string name="lock">&#xf12b;</string>
    <string name="lockA">&#xf12c;</string>
    <string name="lockB">&#xf12d;</string>
    <string name="messageicon">&#xf112;</string>
    <string name="emailiconA">&#xf12e;</string>
    <string name="emailiconB">&#xf12f;</string>
    <string name="emailiconC">&#xf130;</string>
    <string name="peopleiconc">&#xf100;</string>
    <string name="telephoneiconc">&#xf101;</string>


    <string name="facebook_app_id">257335131464016</string>

    <string name="searchculture">Search Culture...</string>
    <string name="back">BACK</string>
    <string name="username">User Name</string>
    <string name="enteremail">Enter email address</string>
    <string name="contactnumber">Contact Number</string>
    <string name="nameperson">Name of Person incharge</string>
    <string name="location">Location</string>
    <string name="forgetpasswordnoquest">FORGOT PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="finish">FINISH</string>
    <string name="rateapp">Rate App</string>
    <string name="referafriend">Refer a Friend</string>
    <string name="signout">Signout</string>
    <string name="oldpassword">Old Password</string>
    <string name="updatetxt">UPDATE</string>
    <string name="upload">UPLOAD</string>
    <string name="newpassword">New Password</string>
    <string name="editProfile">Edit Profile</string>
    <string name="searchinterest">Search Interest</string>
    <string name="changepassword">Change Password</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="profilesteponetext">Lorem ipsum dolor sit amet, consectetur adiposcing elit. pellentesque elit non varius bibendum, turpis mauris consectetur.</string>
    <string name="signin">SIGN IN</string>
    <string name="permision_available_contacts">Contacts Permissions have been granted. Contacts screen can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="signinusing">Sign in using</string>
    <string name="next">NEXT</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="ok">OK</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">G4B5458hBJ0fCuFLGUak6IasE</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">aEgYBuwCeH1y4ltpYvYAgteR02jS62WjfINA8eeKc60tba9BpS</string>
    <string name="macrodatafor">Macro Data for</string>
    <string name="lastsevendays"><u>Last 7 Days</u></string>
    <string name="impression">Impressions</string>
    <string name="clicks">Clicks</string>
    <string name="previous">Previous</string>
    <string name="organisationname">Organization Name</string>
    <string name="myads">My Ads</string>
    <string name="help">Help</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="subscription">Subscriptions</string>
    <string name="account">ACCOUNT</string>
    <string name="culture">CULTURE</string>
    <string name="interest">INTEREST</string>
    <string name="profile">PROFILE</string>
    <string name="googleplacekeydemo">AIzaSyCZEWyP3jsW_tJU4XJmh0MLK5osRbYwO5E</string>


    <string name="googleplacekey">AIzaSyB-5r9SuoTge5Xh-BK8jUIrKCky3ukW7dw</string>
    <string name="bs_cancel">CANCEL</string>
    <string name="sortbylastyear">LAST YEAR</string>
    <string name="sortbylastmonth">LAST MONTH</string>
    <string name="sortbymagic">LAST 7 DAYS</string>
    <string name="analysisdata">There is no analytics data right now, invite everyone you know to watch you analytics grow.</string>
    <string name="apitoken">AYEwqlhzeOIETHQcJy6d8P1ECOKvA-J2Tq5zKKLLXCvVmjjZBYHW3Tc_0DhP7yghgoFnYN6oenSp9jVZ</string>
    <string name="newticket">NEW TICKET</string>
    <string name="send">SEND</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="description">Description</string>
    <string name="newtext">NEW</string>
    <string name="post">POST</string>
    <string name="reopen">REOPEN</string>
    <string name="add">ADD</string>
    <string name="details">DETAILS</string>
    <string name="defaultprofileimg">Default Profile Image</string>
    <string name="change">Change</string>
    <string name="twoffcharacter">255 Characters</string>
    <string name="entertexthere">Enter description here</string>
    <string name="alias">Alias</string>
    <string name="enteralis">Enter Alias</string>

</resources>
