<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/splachd">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <ImageView
            android:id="@+id/forgetbackbutton"
            android:layout_width="@dimen/defaultimg"
            android:layout_height="@dimen/defaultimg"
            android:textColor="@android:color/white"
            android:src="@drawable/leftarrow"
            android:text="@string/leftarrowA"
            android:layout_marginLeft="@dimen/ten"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetpasswordnoquest"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="@dimen/toolbartextsize"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/signiheight"
        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty">
        <ImageView
            android:layout_width="@dimen/defaultimg"
            android:layout_height="@dimen/defaultimg"
            android:src="@drawable/email"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>
        <EditText
            android:id="@+id/emailedittext"
            android:layout_width="match_parent"
            android:background="@null"
            android:hint="@string/email"
            android:textSize="@dimen/signintextsize"
            android:layout_marginLeft="@dimen/ten"
            android:textColorHint="@color/lightgraye"
            android:textColor="@color/lightgraye"
            android:layout_height="match_parent" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:background="@color/lightgraye"/>
    <RelativeLayout
        android:id="@+id/resetpassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/signibackgroundheight"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/twenty"
        android:layout_marginBottom="@dimen/ten"
        android:layout_marginLeft="@dimen/twenty"
        android:layout_marginRight="@dimen/twenty"
        android:background="@drawable/curve_orange">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textStyle="bold"
            android:textSize="@dimen/signintextsize"
            android:textColor="@android:color/white"
            android:layout_centerInParent="true" />
    </RelativeLayout>
</LinearLayout>