<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/toolbarcolor">
        <RelativeLayout
            android:id="@+id/helpbackarrowlayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/profilebackarrow"
                android:layout_width="@dimen/defaultimg"
                android:layout_height="@dimen/defaultimg"
                android:layout_marginLeft="@dimen/five"
                android:text="@string/leftarrowA"
                android:textSize="@dimen/toolbarappiconsize"
                android:src="@drawable/leftarrow"
                android:textColor="@android:color/white"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/profilebackarrow"
                android:layout_centerVertical="true"
                android:textSize="@dimen/toolbartextsizesamll"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"/>
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/help"
            android:src="@drawable/smalllogo"
            android:textAllCaps="true"
            android:textSize="@dimen/toolbartextsize"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:id="@+id/nextbtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">
            <TextView
                android:id="@+id/sendbtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:text="@string/newtext"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="@dimen/toolbartextsize"
                android:layout_marginRight="@dimen/five">
            </TextView>

            <ImageView
                android:layout_width="@dimen/sixteen"
                android:layout_height="@dimen/sixteen"
                android:src="@drawable/addplus"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:layout_marginRight="@dimen/five"
                />
        </LinearLayout>

    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/ticketlistrecyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>